[gd_scene load_steps=11 format=2]

[ext_resource path="res://coin toss simulation/coin new.png" type="Texture" id=1]
[ext_resource path="res://coin toss simulation/scenes/coin_toss.gd" type="Script" id=2]
[ext_resource path="res://coin toss simulation/Helvetica 700_WhatsApp.ttf" type="DynamicFontData" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 47, 65, 246, 245 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 323, 64, 247, 247 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CoinNew_head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 650.5, 483.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoinNew_tail:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 650.5, 483.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "toss"
tracks/0/type = "value"
tracks/0/path = NodePath("CoinNew_head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 0.245008, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 650.5, 483.5 ), Vector2( 650.5, 43.5 ), Vector2( 650.5, 563.5 ), Vector2( 650.5, 483.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoinNew_tail:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.7, 0.8 ),
"transitions": PoolRealArray( 0.245008, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 650.5, 483.5 ), Vector2( 650.5, 43.5 ), Vector2( 650.5, 563.5 ), Vector2( 650.5, 483.5 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CoinNew_head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoinNew_tail:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "toss"
tracks/0/type = "value"
tracks/0/path = NodePath("CoinNew_head:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, -1 ), Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, -1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CoinNew_tail:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, -1 ), Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 1, 0 ), Vector2( 1, -1 ), Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 3 )

[node name="coin_toss" type="Node2D"]
script = ExtResource( 2 )

[node name="CoinNew_head" type="Sprite" parent="."]
position = Vector2( 650.5, 483.5 )
texture = SubResource( 1 )

[node name="CoinNew_tail" type="Sprite" parent="."]
position = Vector2( 650.5, 483.5 )
texture = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/toss = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/RESET = SubResource( 5 )
anims/toss = SubResource( 6 )

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 613.0
margin_top = 621.0
margin_right = 693.0
margin_bottom = 658.0
custom_fonts/font = SubResource( 7 )
text = "TAIL"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
